--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "helmet": "^7.0.0",
+    "mongodb": "^6.1.0",
     "mongoose": "^7.3.1",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.22",
+    "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-github": "^1.1.0",
     "passport-google-oauth20": "^2.0.0",
